[gd_scene load_steps=7 format=3 uid="uid://c6i4vynrrtudd"]

[ext_resource type="Script" path="res://Player/RessourceBar/Script/ressource_bar.gd" id="1_l0m0j"]
[ext_resource type="Texture2D" uid="uid://cuiv62xt4qge3" path="res://Player/RessourceBar/Assets/Moonete.png" id="2_f1s7l"]
[ext_resource type="Texture2D" uid="uid://bxit1dcy7rct4" path="res://Player/RessourceBar/Assets/Moonstone.png" id="3_udd6r"]
[ext_resource type="FontFile" uid="uid://b87a4ripf8q1k" path="res://World/Shop/Assets/04B_30__.TTF" id="4_8cydw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifrfo"]
bg_color = Color(0.85098, 0.792157, 0.333333, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxeql"]
bg_color = Color(0.47451, 0.74902, 0.878431, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="RessourceBar" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 30.0
grow_horizontal = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("1_l0m0j")

[node name="Bars" type="Control" parent="."]
anchors_preset = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 127.0
offset_bottom = 45.0
mouse_filter = 2

[node name="ProgressBarMoney" type="ProgressBar" parent="Bars"]
clip_contents = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -13.0
offset_right = 113.0
offset_bottom = -7.0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_ifrfo")
max_value = 20000.0
value = 5000.0
rounded = true
show_percentage = false

[node name="ProgressBarMoonstone" type="ProgressBar" parent="Bars"]
clip_contents = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -18.0
offset_right = 113.0
offset_bottom = -12.0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_pxeql")
max_value = 20000.0
value = 10000.0
rounded = true
show_percentage = false

[node name="Control" type="Control" parent="Bars"]
layout_mode = 1
anchors_preset = 0
offset_left = 2.0
offset_top = 5.0
offset_right = 12.0
offset_bottom = 15.0
mouse_filter = 2

[node name="Moonete" type="Sprite2D" parent="Bars/Control"]
position = Vector2(4, 5)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_f1s7l")

[node name="Control2" type="Control" parent="Bars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -21.0
offset_right = 11.0
offset_bottom = -11.0
grow_vertical = 0
mouse_filter = 2

[node name="Moonstone" type="Sprite2D" parent="Bars/Control2"]
position = Vector2(5, 6)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_udd6r")

[node name="MoonetenLabel" type="Label" parent="Bars"]
texture_filter = 1
layout_mode = 0
offset_left = 13.0
offset_top = 7.0
offset_right = 113.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("4_8cydw")
theme_override_font_sizes/font_size = 4
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyLabel" type="Label" parent="Bars"]
texture_filter = 1
layout_mode = 0
offset_left = 13.0
offset_top = 22.0
offset_right = 113.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("4_8cydw")
theme_override_font_sizes/font_size = 4
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1
